Changes for 1.6.5

 - [ZBX-864] fixed problem when saving screen item without selected item (Artem)
 - [ZBX-856] fixed email sending if tcp packets from smtp server are segmented (Sasha)
 - [ZBX-855] fixed processing of eventlogs timestamps on server side (Sasha)
 - [ZBX-851] changed sorting of users  to alias in popup (Artem)
 - [ZBX-849] fixed permissions problem for users in dashboard (Artem)
 - [ZBX-797] fixed possible manual deletion of web items (Vedmak)
 - [ZBX-847] fixed error in "Status of ZABBIX" when server is not running (Vedmak)
 - [ZBX-846] fixed node names instead of group names (Artem)

Changes for 1.6.4

 - [ZBX-845] fixed calculation of delayed items for non-local nodes in Queue screen (Sasha)
 - [ZBX-842] fixed duplicate triggers in "Last 20 issues" in dashboard (Artem)
 - [DEV-323] removed master nodes from dropdown (Artem)
 - [ZBX-837] removed sid from Zabbix logo link (Vedmak)
 - [ZBX-589] fixed processing of quoted floating point values (Sasha)
 - [ZBX-836] fixed probem with permissions of proxy shared memory (Sasha)
 - [ZBX-833] fixed link from maps element to trigger status page (Artem)
 - [ZBX-831] DM: fixed synchronization of trends data (Sasha)
 - [DEV-137] DM: improved performance of historical data synchronization (Sasha)
 - [ZBX-827] fixed possible bug in actions hints (Artem)
 - [ZBX-826] fixed problem displaying disabled web checks (Artem)
 - [ZBX-825] fixed problem with changing item status in configuration web and items screens (Artem)
 - [ZBX-822] fixed dashboard when logged in as guest (Artem)
 - [ZBX-763] fixed warning message displayed at the bottom when saving graphs without items (Vedmak)  
 - [ZBX-821] fixed dashboard context menu "Latest data" does not show required host (Vedmak)
 - [ZBX-819] Error in import script (Artem)
 - [ZBX-818] In configuration->items, if selected Host All, items hosts are shown in table (Vedmak)

Changes for 1.6.3
